--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "@prisma/client": "^5.11.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.7",
+    "framer-motion": "^11.0.14",
     "next": "14.1.3",
     "openai": "^4.29.0",
     "prisma": "^5.11.0",
