--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "@prisma/client": "^5.11.0",
+    "ai": "^3.0.22",
     "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.14",
     "kute.js": "^2.2.4",
     "next": "^14.1.3",
-    "openai": "^4.29.0",
+    "openai": "^4.33.0",
     "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
     "react-svg": "^16.1.33",
     "react-svg-blob": "^0.3.1",
-    "usellm": "^0.13.0"
+    "usellm": "^0.13.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
