--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "@prisma/client": "^5.11.0",
+    "@types/nodemailer": "^6.4.17",
     "ai": "^3.0.22",
     "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.14",
     "kute.js": "^2.2.4",
     "next": "^14.1.3",
+    "nodemailer": "^6.9.16",
     "openai": "^4.33.0",
     "prisma": "^5.11.0",
     "react": "^18",
